--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --background: #330300;
+  --textColor: rgb(255, 247, 236);
+}
+
 body {
   margin: 0;
   height: 100vh;
@@ -5,15 +10,15 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #330300;
+  background-color: var(--background);
 }
 
 .quiz-container {
   width: 800px;
   height: 800px;
-  border: 3px solid rgb(255, 255, 255);
+  border: 3px solid white;
   border-radius: 10px;
-  box-shadow: 0 0 15px rgb(255, 255, 255);
+  box-shadow: 0 0 15px white;
   background-image: url('./img/buddha-quiz-800x800-by.jpg');
   background-size: cover;
   background-position: center;
@@ -26,7 +31,7 @@ body {
 .question {
   position: absolute;
   top: 85px;
-  color: #330300;
+  color: var(--background);
   font-weight: 600;
   font-size: x-large;
   font-family: 'Phudu';
@@ -35,31 +40,41 @@ body {
 .options {
   position: absolute;
   top: 490px;
-  color: rgb(255, 247, 236);
+  color: var(--textColor);
   font-family: 'Gluten';
   font-weight: 600;
   font-size: x-large;
   height: 100px;
+  width: 420px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.1em;
+}
+
+label, button {
+  cursor: pointer;
 }
 
 .result {
   position: absolute;
-  top: 480px;
-  color: rgb(255, 247, 236);
+  top: 465px;
+  color: var(--textColor);
   font-family: 'Architects Daughter';
   font-weight: bold;
+  font-size: 1.5em;
 }
 
 .more {
   position: absolute;
-  top: 520px;
-  width: 430px;
-  color: rgb(255, 247, 236);
+  top: 510px;
+  width: 420px;
+  color: var(--textColor);
   font-family: 'Architects Daughter';
   text-align: center;
+  font-size: 1.3em;
 }
 
 .next-btn {
