--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ label, button {
   font-family: 'Architects Daughter';
   font-weight: bold;
   font-size: 1.5em;
+  text-align: center;
 }
 
 .more {
