--- a/style.css
+++ b/style.css
@@ -96,3 +96,9 @@ button {
   color: var(--textColor);
   border-radius: 8px;
 }
+
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
