--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
   border-radius: 15px;
   padding: 0.2em 1em 0.2em 1em ;
   box-shadow: 0 0 10px var(--background);
+  background-color: rgba(255, 255, 255, 0.45);
 }
 
 .options {
