--- a/style.css
+++ b/style.css
@@ -65,6 +65,22 @@ body {
   font-weight: 500;
 }
 
+.goodAnswer {
+  position: absolute;
+  top: 260px;
+  text-align: center;
+  color: greenyellow;
+  text-shadow: 0 0 1px black;
+}
+
+.badAnswer {
+  position: absolute;
+  top: 140px;
+  text-align: center;
+  color: red;
+  text-shadow: 0 0 1px black;
+}
+
 .option1 {
   position: absolute;
   top: 180px;
@@ -97,7 +113,7 @@ label {
   padding: 0.4em;
 }
 
-label:hover, .selected {
+label:hover {
   border: 2px solid var(--background);
   border-radius: 15px;
   box-shadow: 0 0 8px var(--background);
@@ -106,7 +122,7 @@ label:hover, .selected {
 
 .result {
   position: absolute;
-  top: 465px;
+  top: 470px;
   color: var(--textColor);
   font-family: 'Architects Daughter';
   font-weight: bold;
