--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
-  --background: #330300;
+  /* --background: #330300; */
+  --background: #470602;
   --textColor: rgb(255, 247, 236);
 }
 
@@ -122,17 +123,21 @@ label:hover {
 
 .result {
   position: absolute;
-  top: 470px;
+  top: 405px;
+  width: 300px;
+  height: 50px;
+
   color: var(--textColor);
   font-family: 'Architects Daughter';
   font-weight: bold;
   font-size: 1.5em;
   text-align: center;
+  background-color: var(--background);
 }
 
 .more {
   position: absolute;
-  top: 510px;
+  top: 490px;
   width: 420px;
   color: var(--textColor);
   font-family: 'Nunito';
