--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 .quiz-container {
+  position: relative;
   width: 800px;
   height: 800px;
   border: 3px solid white;
@@ -25,11 +26,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
 }
 
 .question {
-  position: absolute;
   top: 55px;
   color: var(--background);
   font-weight: 600;
@@ -50,7 +49,6 @@ body {
 }
 
 .goodAnswer {
-  position: absolute;
   top: 260px;
   text-align: center;
   color: greenyellow;
@@ -58,7 +56,6 @@ body {
 }
 
 .badAnswer {
-  position: absolute;
   top: 145px;
   text-align: center;
   color: red;
@@ -66,26 +63,28 @@ body {
   transform: rotate(-45deg);
 }
 
-.option1 {
+.question, .goodAnswer, .badAnswer,
+.option1, .option2, .option3, .option4, 
+.more, .next-btn, input[type="radio"] {
   position: absolute;
+}
+
+.option1 {
   top: 180px;
   right: 470px;
 }
 
 .option2 {
-  position: absolute;
   top: 280px;
   right: 530px;
 }
 
 .option3 {
-  position: absolute;
   top: 180px;
   left: 470px;
 }
 
 .option4 {
-  position: absolute;
   top: 280px;
   left: 530px;
 }
@@ -110,7 +109,6 @@ label:hover {
 }
 
 .more {
-  position: absolute;
   top: 490px;
   width: 420px;
   color: var(--textColor);
@@ -121,7 +119,6 @@ label:hover {
 }
 
 .next-btn {
-  position: absolute;
   bottom: 30px;
   right: 30px;
   font-family: 'Phudu';
@@ -137,7 +134,6 @@ button {
 }
 
 input[type="radio"] {
-  position: absolute;
   opacity: 0;
   pointer-events: none;
 }
